--- a/content/publication/anke-2005/{slugify(entry['ID'])}.bib
+++ b/content/publication/anke-2005/{slugify(entry['ID'])}.bib
@@ -1,6 +1,7 @@
 @book{Anke.2005,
  address = {Dresden},
  author = {Anke, Jürgen},
+ file = {http://www.worldcat.org/oclc/181472769},
  isbn = {3-938863-04-8},
  keywords = {Beschaffungsplanung;Entscheidungsunterstützungssystem;Strategisches Management},
  publisher = {TUDpress},
