--- a/content/publication/anke-2006-c/{slugify(entry['ID'])}.bib
+++ b/content/publication/anke-2006-c/{slugify(entry['ID'])}.bib
@@ -4,11 +4,10 @@
  booktitle = {Information Control Problems in Manufacturing},
  doi = {10.3182/20060517-3-FR-2903.00401},
  editor = {Dolgui, Alexandre},
+ file = {https://doi.org/10.3182/20060517-3-FR-2903.00401},
  pages = {867--872},
  publisher = {IFAC, Elsevier},
- series = {IFAC proceedings volumes},
  title = {Early data processing in smart item environments using mobile services},
- url = {https://www.sciencedirect.com/science/article/pii/S1474667015361218},
  year = {2006}
 }
 
