--- a/content/publication/anke-2006-d/{slugify(entry['ID'])}.bib
+++ b/content/publication/anke-2006-d/{slugify(entry['ID'])}.bib
@@ -5,6 +5,7 @@
  booktitle = {Encyclopedia of E-Commerce, E-Government, and Mobile Commerce},
  doi = {10.4018/978-1-59140-799-7.ch148},
  editor = {Khosrow-Pour, Mehdi},
+ file = {https://doi.org/10.4018/978-1-59140-799-7.ch148},
  isbn = {9781591407997},
  pages = {919--925},
  publisher = {Idea Group Reference},
