--- a/content/publication/anke-2006/{slugify(entry['ID'])}.bib
+++ b/content/publication/anke-2006/{slugify(entry['ID'])}.bib
@@ -2,6 +2,7 @@
  author = {Anke, Jürgen and Kabitzsch, Klaus},
  booktitle = {IEEE Conference on Emerging Technologies and Factory Automation},
  doi = {10.1109/ETFA.2006.355188},
+ file = {http://dx.doi.org/10.1109/etfa.2006.355188},
  pages = {1238--1245},
  title = {Cost-based Deployment Planning for Components in Smart Item Environments},
  year = {2006}
