--- a/content/publication/anke-2007-c/{slugify(entry['ID'])}.bib
+++ b/content/publication/anke-2007-c/{slugify(entry['ID'])}.bib
@@ -1,11 +1,16 @@
 @inproceedings{Anke.2007c,
- address = {Berlin},
- author = {Anke, Jürgen and Wolf, Bernhard and Neugebauer, Mario and Eisenreich, Katrin and Do, Hong-Hai and Hackenbroich, Gregor},
- booktitle = {KiVS 2007 - Kommunikation in verteilten Systemen},
- editor = {Braun, Torsten},
- isbn = {3800729806},
- publisher = {VDE},
- title = {A Middleware for Real-world Aware PLM Applications},
+ address = {Berlin [u.a.]},
+ author = {Anke, Jürgen and Wolf, Bernhard and Hackenbroich, Gregor and Kabitzsch, Klaus},
+ booktitle = {Distributed applications and interoperable systems},
+ doi = {10.1007/978-3-540-72883-2\textunderscore 23},
+ editor = {Indulska, Jadwiga},
+ file = {https://doi.org/10.1007/978-3-540-72883-2_23},
+ isbn = {978-3-540-72881-8},
+ pages = {309--322},
+ publisher = {Springer},
+ series = {Lecture Notes in Computer Science},
+ title = {A Planning Method for Component Placement in Smart Item Environments Using Heuristic Search},
+ volume = {4531},
  year = {2007}
 }
 
