--- a/content/publication/anke-2008-b/{slugify(entry['ID'])}.bib
+++ b/content/publication/anke-2008-b/{slugify(entry['ID'])}.bib
@@ -4,6 +4,7 @@
  booktitle = {Handbook of research on ubiquitous computing technology for real time enterprises},
  doi = {10.4018/978-1-59904-832-1.ch025},
  editor = {Mühlhäuser, Max and Gurevych, Iryna},
+ file = {https://doi.org/10.4018/978-1-59904-832-1.ch025},
  isbn = {9781599048321},
  pages = {559--566},
  publisher = {Information Science Reference},
