--- a/content/publication/anke-2008/{slugify(entry['ID'])}.bib
+++ b/content/publication/anke-2008/{slugify(entry['ID'])}.bib
@@ -1,6 +1,7 @@
 @book{Anke.2008,
  address = {Dresden},
  author = {Anke, Jürgen},
+ file = {http://www.worldcat.org/oclc/244014943},
  isbn = {978-3-940046-61-1},
  keywords = {Eingebettetes System;Heterogenes Netzwerk;Komponente;Middleware;Smart Device;Verteilung},
  publisher = {TUDpress},
