--- a/content/publication/anke-2015/{slugify(entry['ID'])}.bib
+++ b/content/publication/anke-2015/{slugify(entry['ID'])}.bib
@@ -5,10 +5,10 @@
  booktitle = {Dienstleistungspotenziale und Geschäftsmodelle in der Personalisierten Medizin},
  doi = {10.1007/978-3-658-08403-5\textunderscore 17},
  editor = {Eppinger, Elisabeth and Halecker, Bastian and Hölzle, Katharina and Kamprath, Martin},
+ file = {https://doi.org/10.1007/978-3-658-08403-5_17},
  isbn = {978-3-658-08402-8},
  pages = {485--513},
  publisher = {Gabler},
- series = {SpringerLink : Bücher},
  title = {Das Internet der Dinge als Grundlage für innovative e-Health-Dienste},
  year = {2015}
 }
