--- a/content/publication/anke-2016-b/{slugify(entry['ID'])}.bib
+++ b/content/publication/anke-2016-b/{slugify(entry['ID'])}.bib
@@ -4,6 +4,7 @@
  booktitle = {Multikonferenz Wirtschaftsinformatik},
  doi = {10.13140/RG.2.1.4209.6402},
  editor = {Nissen, Volker and Stelzer, Dirk and Straßburger, Steffen and Daniel, Fischer},
+ file = {https://doi.org/10.13140/RG.2.1.4209.6402},
  isbn = {3863601327},
  title = {Prototyp eines Tools zur Abschätzung der Wirtschaftlichkeit von Smart Services für vernetzte Produkte},
  year = {2016}
