--- a/content/publication/anke-2016-c/{slugify(entry['ID'])}.bib
+++ b/content/publication/anke-2016-c/{slugify(entry['ID'])}.bib
@@ -1,11 +1,14 @@
-@inproceedings{Anke.2016c,
- abstract = {Intelligentes Parken – „Smart Parking“ – verspricht eine effiziente Organisation des ruhenden Verkehrs und bildet eine konkrete Applikation im Rahmen des Konzepts Smart City. Die vielfältigen Auswirkungen des Einsatzes analysiert dieser Beitrag. Anhand der Ziele verschiedener Akteure und der Funktionen von Smart Parking Systemen wird der Nutzen abgeleitet und mit Erfahrungen von Pilotinstallationen exemplarisch quantifiziert.},
- author = {Anke, Jürgen and Scholle, Julia},
- booktitle = {Digitale Transformation: Methoden, Kompetenzen und Technologien für die Verwaltung},
- editor = {Rätz, Detlef and Breidung, Michael and Lück-Schneider, Dagmar and Kaiser, Siegfried and Schweighofer, Erich},
- pages = {175--187},
- series = {Lecture Notes in Informatics},
- title = {Nutzenpotenziale von Smart Parking},
+@article{Anke.2016c,
+ abstract = {Die datenschutzkonforme Handhabung von Daten ist für Unternehmen mit komplexen IT-Landschaften eine große Herausforderung. Datenschutzverstöße stellen rechtliche und finanzielle Risiken dar, insbesondere durch die umsatzabhängigen Bußgelder, die in der neuen EU-Datenschutzgrundverordnung (EU-DSGVO) vorgesehen sind. Die Sicherstellung der Datenschutzkonformität in betrieblichen Anwendungssystemen ist bislang aufwändig und nur in geringem Umfang automatisiert. In diesem Beitrag wird ein Lösungsansatz vorgestellt, der die durchgängige Dokumentation, Durchsetzung und Kontrolle von Datenschutzanforderungen für betriebliche Anwendungssysteme gewährleisten soll, um eine nachhaltige Datenschutzkonformität zu erreichen. Dazu schlagen wir eine Methodik vor, die organisatorische Prozesse sowie technische Komponenten miteinander verbindet, um die Verwaltung von Datenschutzanforderungen stärker in das unternehmensweite IT-Management zu integrieren.},
+ author = {Anke, Jürgen and Berning, Wilhelm and Schmidt, Johannes and Zinke, Christian},
+ doi = {10.1365/s40702-016-0283-0},
+ issn = {1436-3011},
+ journal = {HMD Praxis der Wirtschaftsinformatik},
+ keywords = {Datenschutz},
+ number = {1},
+ pages = {67--83},
+ title = {IT-gestützte Methodik zum Management von Datenschutzanforderungen},
+ volume = {54},
  year = {2016}
 }
 
