--- a/content/publication/chaves-2006/{slugify(entry['ID'])}.bib
+++ b/content/publication/chaves-2006/{slugify(entry['ID'])}.bib
@@ -4,6 +4,7 @@
  booktitle = {1st International Workshop on Middleware for Sensor Networks (MidSens'06)},
  doi = {10.1145/1176866.1176871},
  editor = {Cahill, Vinny and Michiels, Sam},
+ file = {https://doi.org/10.1145/1176866.1176871},
  pages = {25--30},
  title = {Service lifecycle management infrastructure for smart items},
  year = {2006}
