--- a/content/publication/frenken-2008/{slugify(entry['ID'])}.bib
+++ b/content/publication/frenken-2008/{slugify(entry['ID'])}.bib
@@ -4,10 +4,11 @@
  booktitle = {ServiceWave 2008 - Towards a service-based Internet},
  doi = {10.1007/978-3-540-89897-9\textunderscore 20},
  editor = {Mähönen, Petri and Pohl, Klaus and Priol, Thierry},
+ file = {https://doi.org/10.1007/978-3-540-89897-9_20},
  isbn = {978-3-540-89896-2},
  pages = {230--241},
  publisher = {Springer},
- series = {LNCS sublibrary. SL 3--Information systems and application, incl. Internet/Web and HCI},
+ series = {LNCS},
  title = {A Flexible and Extensible Architecture for Device-Level Service Deployment},
  volume = {5377},
  year = {2008}
