--- a/content/publication/hong-hai-do-2006/{slugify(entry['ID'])}.bib
+++ b/content/publication/hong-hai-do-2006/{slugify(entry['ID'])}.bib
@@ -3,6 +3,7 @@
  author = {Hong-Hai Do and Anke, Jürgen and Hackenbroich, Gregor},
  booktitle = {17th International Workshop on Database and Expert Systems Applications (DEXA'06)},
  doi = {10.1109/DEXA.2006.30},
+ file = {https://doi.org/10.1109/DEXA.2006.30},
  pages = {30--34},
  title = {Architecture Evaluation for Distributed Auto-ID Systems},
  year = {2006}
