--- a/content/publication/streich-2018/{slugify(entry['ID'])}.bib
+++ b/content/publication/streich-2018/{slugify(entry['ID'])}.bib
@@ -2,13 +2,13 @@
  abstract = {Der Automobilsektor steht vor einem tiefgreifenden Wandel. Fahrzeuge werden unter dem Schlagwort ''Connected Car'' zunehmend vernetzt und erzeugen durch Sensoren eine enorme Menge hoch detaillierter und sensibler Daten. Diese Entwicklung schafft die Grundlage für digitale Geschäftsmodelle wie Usage-Based Insurance (UBI). Dabei handelt es sich um Kfz-Versicherungstarife, deren Prämie anhand des Fahrverhaltens des Versicherten bemessen wird. Entsprechend können Versicherte ihren Versicherungsbeitrag (Prämie) senken, sofern sie sicher und unfallvermeidend fahren. Um UBI-Tarife anbieten zu können, benötigen Versicherungen Daten über das Fahrverhalten anhand derer eine Risikoeinschätzung durchgeführt werden kann. Da die Datenschutzbedenken der Bevölkerung jedoch noch immer groß sind, entsteht ein Konflikt zwischen Versicherer und Autofahrer, der die Akzeptanz solcher UBI-Tarife beeinflusst. Dieser Beitrag beschäftigt sich mit der Bewertung verschiedener Anreize zur Auflösung dieses Konflikts. Neben der Systematisierung verschiedener monetärer und nicht-monetärer Anreize wurde die Akzeptanz monetärer Anreize dabei mittels Discrete-Choice Experiment im Zuge einer Umfrage mit 215 Teilnehmern untersucht. Auf diese Weise konnte die notwendige monetäre Kompensation für das Teilen der für UBI-Tarife benötigten sensiblen Daten ermittelt werden. Weiterhin konnte festgestellt werden, dass die Kompensation in Form von indirekt monetären Anreizen wie zusätzliche Funktionen von Assistenz- oder Entertainmentsysteme nur geringe Auswirkungen auf die Akzeptanz von UBI-Tarifen hat.},
  author = {Streich, Mathias and D’Imperio, Antonio and Anke, Jürgen},
  doi = {10.1365/s40702-018-0432-8},
+ file = {Streich, D’Imperio et al 2018 - Bewertung von Anreizen zum Teilen.pdf},
  issn = {1436-3011},
  journal = {HMD Praxis der Wirtschaftsinformatik},
  keywords = {Connected Car;Datengetriebene Dienstleistungen;Datenschutz;Usage-based insurance},
  number = {5},
  pages = {1086--1109},
  title = {Bewertung von Anreizen zum Teilen von Daten für digitale Geschäftsmodelle am Beispiel von Usage-based Insurance},
- url = {http://dx.doi.org/10.1365/s40702-018-0432-8},
  volume = {55},
  year = {2018}
 }
