--- a/content/publication/wellsandt-2016/{slugify(entry['ID'])}.bib
+++ b/content/publication/wellsandt-2016/{slugify(entry['ID'])}.bib
@@ -5,10 +5,10 @@
  booktitle = {Smart Service Engineering},
  doi = {10.1007/978-3-658-16262-7\textunderscore 11},
  editor = {Thomas, Oliver and Nüttgens, Markus and Fellmann, Michael},
+ file = {http://link.springer.com/chapter/10.1007/978-3-658-16262-7_11},
  isbn = {3658162619},
- publisher = {Springer Fachmedien Wiesbaden GmbH and Springer Gabler},
+ publisher = {Springer Gabler},
  title = {Modellierung der Lebenszyklen von Smart Services},
- url = {http://link.springer.com/content/pdf/10.1007%2F978-3-658-16262-7_11.pdf},
  year = {2016}
 }
 
