--- a/content/publication/wieland-2016/{slugify(entry['ID'])}.bib
+++ b/content/publication/wieland-2016/{slugify(entry['ID'])}.bib
@@ -2,6 +2,7 @@
  abstract = {Die agile Softwareentwicklung auf Basis der Scrum-Methodik ist nicht nur in der Praxis, sondern auch für Hochschulprojekte populär. Bei der Durchführung von Softwareprojekten in dualen und berufsbegleitenden Studiengängen sind durch die geografische Verteilung der Studierenden sowie die Arbeit in Teilzeit einige Grundannahmen von Scrum nicht realisierbar. In diesem Beitrag untersuchen wir auf Basis der Analyse von 20 Projektberichten, welche Aspekte von Scrum studentische Teams in welcher Form modifiziert haben, um ihren Bedingungen gerecht zu werden.},
  author = {Wieland, Sabine and Anke, Jürgen and Fichte, Alexander and Helbig, Jens},
  doi = {10.1007/s00287-016-1003-4},
+ file = {http://link.springer.com/10.1007/s00287-016-1003-4},
  issn = {0170-6012},
  journal = {Informatik-Spektrum},
  title = {Adaption von SCRUM für verteilte Teams in Teilzeitarbeit},
