--- a/content/publication/anke-2018-b/{slugify(entry['ID'])}.bib
+++ b/content/publication/anke-2018-b/{slugify(entry['ID'])}.bib
@@ -1,13 +1,14 @@
-@incollection{Anke.2018b,
- abstract = {Zusammenfassung Die Durchdringung von Informationstechnik (IT) in Dienstleistungen sowie die zunehmende Verbreitung von Technologie für die Erfassung, Speicherung und Verarbeitung großer Datenmengen führt zur Entstehung von digitalen Dienstleistungssystemen. Diese erlauben die zeit- und ortsunabhängige Bereitstellung sowie einen hohen Automatisierungsgrad von Dienstleistungen. Verbunden mit diesen Potenzialen ist eine hohe Komplexität dieser Systeme. Dieser Beitrag beschreibt die Herausforderungen beim Smart Service Engineering und stellt das Konzept für ein Smart Service Lab vor, welches die Entwicklung der notwendigen Methoden mittels praktischer Anwendung nach dem Co-Innovation Ansatz vorantreiben soll.},
- address = {Wiesbaden},
- author = {Anke, Jürgen and Meyer, Kyrill and Alt, Rainer and Holze, Julia and Kahlert, Eva},
- booktitle = {Service Engineering},
- doi = {10.1007/978-3-658-20905-6\textunderscore 7},
- editor = {Meyer, Kyrill and Klingner, Stephan and Zinke, Christian},
- isbn = {978-3-658-20905-6},
- publisher = {Springer Vieweg},
- title = {Lernen aus Anwendung: Transfer-orientierte Entwicklung von Methoden für das Smart Service Engineering},
+@article{Anke.2018b,
+ abstract = {Smart services are an approach for the IT-supported provision of services based on networked products. They enable new relationships between manufacturers and end users, as well as the establishment of new value-creation networks. To gain benefits from these potentials, service providers face the challenges of designing and managing smart services. This is mainly due to the complexity of the underlying cyber-physical system (CPS) as well as the individual life cycles of components and third-party services it consists of. Additionally, a number of actors and their tasks, various tangible and intangible benefits, as well as flows of material, information and money need to be considered during the planning and provisioning of the service. In this paper, we investigate the potential of modelling smart services with the Lifecycle Modeling Language (LML). To this end, we analyse the fulfillment of information need of different stakeholders based on a consumable material replenishment service for 3D printers.},
+ author = {Anke, Jürgen and Wellsandt, Stefan and Thoben, Klaus-Dieter},
+ doi = {10.18417/EMISA.13.17},
+ file = {9e050603-5db5-48c9-8ed2-7371fc4f268c:C\:\\Users\\Jürgen\\AppData\Łocal\\Swiss Academic Software\\Citavi 6\\ProjectCache\q̌wppkqz1lf5bv25msuowtak76xyr8lbu7vkg8db2aadb6\\Citavi Attachments\\9e050603-5db5-48c9-8ed2-7371fc4f268c.pdf:pdf},
+ journal = {Enterprise Modelling and Information Systems Architectures (EMISAJ)},
+ keywords = {Internet of things;Life Cycle Modelling;LML;Smart Services;Supply Chain Management},
+ number = {17},
+ pages = {1--21},
+ title = {Modelling of a Smart Service for Consumables Replenishment},
+ volume = {13},
  year = {2018}
 }
 
