--- a/content/publication/thamm-2016/{slugify(entry['ID'])}.bib
+++ b/content/publication/thamm-2016/{slugify(entry['ID'])}.bib
@@ -5,9 +5,10 @@
  booktitle = {Business Information Systems},
  doi = {10.1007/978-3-319-39426-8\textunderscore 15},
  editor = {Abramowicz, Witold and Alt, Rainer and Franczyk, Bogdan},
+ file = {https://doi.org/10.1007/978-3-319-39426-8_15},
  isbn = {978-3-319-39425-1},
  pages = {181--192},
- publisher = {Springer International Publishing and Imprint and Springer},
+ publisher = {Springer International Publishing},
  series = {Lecture Notes in Business Information Processing},
  title = {Towards the Omni-Channel: Beacon-Based Services in Retail},
  volume = {255},
