--- a/content/publication/walzer-2007/{slugify(entry['ID'])}.bib
+++ b/content/publication/walzer-2007/{slugify(entry['ID'])}.bib
@@ -2,7 +2,7 @@
  author = {Walzer, Karen and Anke, Jürgen and Loser, Alexander and Wu, Huaigu},
  booktitle = {1st International Workshop on Distributed Event Processing, Systems and Applications},
  doi = {10.1109/ICDCSW.2007.6},
- pages = {64},
+ file = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=4279068},
  title = {A Concept for Flexible Event-Driven Invocation of Distributed Service Compositions},
  year = {2007}
 }
